--- a/views/show_Room.html
+++ b/views/show_Room.html
@@ -294,16 +294,22 @@
                         <img src="../img/rating.webp" alt="Rating icon" class="rating">
                     </article>
                     <article class="color">
-                        <div class="colorBlack"></div>
-                        <div class="colorWhite"></div>
+                        <h3 class="titleSize">Color</h3>
+                            <div class="containerColor">
+                            <div class="colorBlack"></div>
+                            <div class="colorWhite"></div>
+                        </div>
                     </article>
                     <article class="size">
-                        <div class="itemSize">XS</div>
-                        <div class="itemSize">S</div>
-                        <div class="itemSize">M</div>
-                        <div class="itemSize">L</div>
-                        <div class="itemSize">XL</div>
-                        <div class="itemSize">XXL</div>
+                        <h3 class="titleSize">Size</h3>
+                        <div class="containerSize">
+                            <div class="itemSize">XS</div>
+                            <div class="itemSize">S</div>
+                            <div class="itemSize">M</div>
+                            <div class="itemSize">L</div>
+                            <div class="itemSize">XL</div>
+                            <div class="itemSize">XXL</div>
+                        </div>
                     </article>
                     <article class="addToCart">
                         <button class="btnAddToCart">Add to cart</button>
@@ -312,16 +318,16 @@
                     <article class="complementInfo">
                         <div class="delivery">
                             <img class="deliveryIcon" src="../img/delivery_Icon.svg" alt="Delivery icon">
-                            <p class="sentenceDelivery">For purchases over $1000
-                                You get free delivery
+                            <p class="sentenceDelivery">
+                                Free shipping on orders over $1000
                             </p>
                         </div>
                         <div class="creditCard">
-                            <img src="../img/credit_Card_Icon.svg" alt="Credit Card">
+                            <img class="creditCardIcon" src="../img/credit_Card_Icon.svg" alt="Credit Card">
                             <p class="sentenceDelivery">Oneline payment</p>
                         </div>
                         <div class="return">
-                            <img src="../img/return_Icon.svg" alt="Return icon">
+                            <img class="returnIcon" src="../img/return_Icon.svg" alt="Return icon">
                             <p class="sentenceReturn">Return whithin 60 days</p>
                         </div>
                     </article>
