--- a/views/show_Room.html
+++ b/views/show_Room.html
@@ -291,10 +291,10 @@
                 <div class="infoProduct">
                     <article class="productRating">
                         <p class="product">Outfit...$499</p>
-                        <img src="../img/rating.webp" alt="Rating icon" class="rating">
+                        <img class="rating" src="../img/rating.webp" alt="Rating icon">
                     </article>
                     <article class="color">
-                        <h3 class="titleSize">Color</h3>
+                        <h3 class="titleColor">Color</h3>
                             <div class="containerColor">
                             <div class="colorBlack"></div>
                             <div class="colorWhite"></div>
@@ -334,7 +334,7 @@
                 </div>
                 <div class="accordion accordion-flush containerAccordion" id="accordionFlushExample">
                     <div class="accordion-item">
-                    <h2 class="accordion-header">
+                    <h2 class="accordion-header title">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
                             <p>Reviews</p>
                         </button>
@@ -348,7 +348,7 @@
                     </div>
                     </div>
                     <div class="accordion-item">
-                    <h2 class="accordion-header">
+                    <h2 class="accordion-header title">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
                             <p>Description</p>
                         </button>
@@ -361,7 +361,7 @@
                     </div>
                     </div>
                     <div class="accordion-item">
-                    <h2 class="accordion-header">
+                    <h2 class="accordion-header title">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
                             <p>Delivery & Return</p>
                         </button>
