--- a/scss/_show_Room.scss
+++ b/scss/_show_Room.scss
@@ -167,3 +167,12 @@
         }
     }
 }
+.newArrivals{
+    .title{
+        font-size:2rem;
+        font-family: $fontRubik;
+        color: #BC2327;
+        text-align: center;
+        margin-bottom: 80px;
+    }
+}
