--- a/views/show_Room.html
+++ b/views/show_Room.html
@@ -377,6 +377,147 @@
             </div>
         </section>
 
+        <!-- New Arrivals -->
+
+        <section class="newArrivals" id="newArrivals">
+            <h3 class="title">"If you're interested, you can also check out our new outfits."</h3>
+            <div class="sectionCard d-flex flex-direction-row">
+                <article class="cardProducts m-0">
+                    <div class="article1">
+                        <label for="new1" class="fadeAway">
+                            <img src="../img/skull.svg" alt="Skull logo" class="skull">
+                        </label>
+                        <input type="checkbox" id="new1" class="new">
+                        <a href="../views/store.html" class="smallCard">
+                            <img src="../img/pic38.webp" alt="Outfit Image" class="outFit">
+                            <p class="price">Outfit.................................$499</p>
+                        </a>
+                        <img src="../img/pic38.webp" alt="Outfit Image" id="outFit" class="outFit">
+                    </div>
+                </article>
+                <article class="cardProducts m-0">
+                    <div class="article2">
+                        <label for="new2" class="fadeAway">
+                            <img src="../img/skull.svg" alt="Skull logo" class="skull">
+                        </label>
+                        <input type="checkbox" id="new2" class="new">
+                        <a href="../views/store.html" class="smallCard">
+                            <img src="../img/pic28.webp" alt="Outfit Image" class="outFit">
+                            <p class="price">Outfit.................................$499</p>
+                        </a>
+                        <img src="../img/pic28.webp" alt="Outfit Image"  id="outFit" class="outFit">
+                    </div>
+                </article>
+                <article class="cardProducts m-0">
+                    <div class="article3">
+                        <label for="new3" class="fadeAway">
+                            <img src="../img/skull.svg" alt="Skull logo" class="skull">
+                        </label>
+                        <input type="checkbox" id="new3" class="new">
+                        <a href="../views/store.html"  class="smallCard">
+                            <img src="../img/pic29.webp" alt="Outfit Image" class="outFit">
+                            <p class="price">Outfit.................................$499</p>
+                        </a>
+                        <img src="../img/pic29.webp" alt="Outfit Image" id="outFit" class="outFit">
+                    </div>
+                </article>
+                <article class="cardProducts m-0">
+                    <div class="article4">
+                        <label for="new4" class="fadeAway">
+                            <img src="../img/skull.svg" alt="Skull logo" class="skull">
+                        </label>
+                        <input type="checkbox" id="new4" class="new">
+                        <a href="../views/store.html" class="smallCard">
+                            <img src=../img/pic33.webp" alt="Outfit Image" class="outFit">
+                            <p class="price">Outfit.................................$499</p>
+                        </a>
+                        <img src="../img/pic33.webp" alt="Outfit Image" id="outFit" class="outFit">
+                    </div>
+                </article>
+                <article class="cardProducts m-0">
+                    <div class="article5">
+                        <label for="new5" class="fadeAway">
+                            <img src="../img/skull.svg" alt="Skull logo" class="skull">
+                        </label>
+                        <input type="checkbox" id="new5" class="new">
+                        <a href="../views/store.html" class="smallCard">
+                            <img src="../img/pic30.webp" alt="Outfit Image" class="outFit">
+                            <p class="price">Outfit.................................$499</p>
+                        </a>
+                        <img src="../img/pic30.webp" alt="Outfit Image" id="outFit" class="outFit">
+                    </div>
+                </article>
+            </div>
+            <div class="sectionCard d-flex flex-direction-row">
+                <article class="cardProducts m-0">
+                    <div class="article6">
+                        <label for="new6" class="fadeAway">
+                            <img src="../img/skull.svg" alt="Skull logo" class="skull">
+                        </label>
+                        <input type="checkbox" id="new6" class="new">
+                        <a href="../views/store.html" class="smallCard">
+                            <img src="../img/pic20.webp" alt="Outfit Image" class="outFit">
+                            <p class="price">Outfit.................................$499</p>
+                        </a>
+                        <img src="../img/pic20.webp" alt="Outfit Image" id="outFit" class="outFit">
+                    </div>
+                </article>
+                <article class="cardProducts m-0">
+                    <div class="article7">
+                        <label for="new7" class="fadeAway">
+                            <img src="../img/skull.svg" alt="Skull logo" class="skull">
+                        </label>
+                        <input type="checkbox" id="new7" class="new">
+                        <a href="../views/store.html" class="smallCard">
+                            <img src="../img/pic17.webp" alt="Outfit Image" class="outFit">
+                            <p class="price">Outfit.................................$499</p>
+                        </a>
+                        <img src="../img/pic17.webp" alt="Outfit Image" id="outFit" class="outFit">
+                    </div>
+                </article>
+                <article class="cardProducts m-0">
+                    <div class="article8">
+                        <label for="new8" class="fadeAway">
+                            <img src="../img/skull.svg" alt="Skull logo" class="skull">
+                        </label>
+                        <input type="checkbox" id="new8" class="new">
+                        <a href="../views/store.html" class="smallCard">
+                            <img src="../img/pic36.webp" alt="Outfit Image" class="outFit">
+                            <p class="price">Outfit.................................$499</p>
+                        </a>
+                        <img src="../img/pic36.webp" alt="Outfit Image" id="outFit" class="outFit">
+                    </div>
+                </article>
+                <article class="cardProducts m-0">
+                    <div class="article9">
+                        <label for="new9" class="fadeAway">
+                            <img src="../img/skull.svg" alt="Skull logo" class="skull">
+                        </label>
+                        <input type="checkbox" id="new9" class="new">
+                        <a href="../views/store.html" class="smallCard">
+                            <img src="../img/pic35.webp" alt="Outfit Image" class="outFit">
+                            <p class="price">Outfit.................................$499</p>
+                        </a>
+                        <img src="../img/pic35.webp" alt="Outfit Image" id="outFit" class="outFit">
+                    </div>
+                </article>
+                <article class="cardProducts m-0">
+                    <div class="article10">
+                        <label for="new10" class="fadeAway">
+                            <img src="../img/skull.svg" alt="Skull logo" class="skull">
+                        </label>
+                        <input type="checkbox" id="new10" class="new">
+                        <a href="../views/store.html" class="smallCard">
+                            <img src="../img/pic34.webp" alt="Outfit Image" class="outFit">
+                            <p class="price">Outfit.................................$499</p>
+                        </a>
+                        <img src="../img/pic34.webp" alt="Outfit Image" id="outFit" class="outFit">
+                    </div>
+                </article>
+            </div>
+        </section>
+
+
     </main>
 
     <!-- Footer -->
