--- a/css/main.css
+++ b/css/main.css
@@ -3406,6 +3406,14 @@ html .mainContainer .skullSocialMedia .socialMedia ul li k .item .itemSocial {
   font-weight: 700;
 }
 
+.newArrivals .title {
+  font-size: 2rem;
+  font-family: "Rubik Distressed", cursive;
+  color: #BC2327;
+  text-align: center;
+  margin-bottom: 80px;
+}
+
 .footerContainer {
   width: 100%;
   height: 100%;
