--- a/views/show_Room.html
+++ b/views/show_Room.html
@@ -428,7 +428,7 @@
                         </label>
                         <input type="checkbox" id="new4" class="new">
                         <a href="../views/store.html" class="smallCard">
-                            <img src=../img/pic33.webp" alt="Outfit Image" class="outFit">
+                            <img src="../img/pic33.webp" alt="Outfit Image" class="outFit">
                             <p class="price">Outfit.................................$499</p>
                         </a>
                         <img src="../img/pic33.webp" alt="Outfit Image" id="outFit" class="outFit">
