--- a/views/show_Room.html
+++ b/views/show_Room.html
@@ -341,9 +341,9 @@
                     </h2>
                     <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
                         <div class="accordion-body">
-                            <p>"I love the skater outfit I got from [Your Store Name]! It's super comfortable and looks great. Fast delivery too!"</p>
-                            <p>"The customer service at [Your Store Name] is top-notch. They helped me with a return, and it was a breeze. Will definitely shop here again!"</p>
-                            <p>"I'm impressed with the quality of the products from [Your Store Name]. The skater shorts are my new favorites. Highly recommended</p>
+                            <p>"I love the skater outfit I got from <span>Break a Leg!</span>. It's super comfortable and looks great. Fast delivery too!"</p>
+                            <p>"The customer service at <span>Break a Leg!</span> is top-notch. They helped me with a return, and it was a breeze. Will definitely shop here again!"</p>
+                            <p>"I'm impressed with the quality of the products from <span>Break a Leg!</span>. The skater shorts are my new favorites. Highly recommended</p>
                         </div>
                     </div>
                     </div>
@@ -369,7 +369,7 @@
                     <div id="flush-collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
                         <div class="accordion-body">
                             <p>Delivery: Fast and reliable shipping options. Track your order and enjoy worldwide delivery.</p>
-                            <p>  Return: 30-day return policy. Hassle-free process. Choose a refund or exchange. Your satisfaction is our priority.</p>
+                            <p> Return: 30-day return policy. Hassle-free process. Choose a refund or exchange. Your satisfaction is our priority.</p>
                         </div>
                     </div>
                     </div>
@@ -516,7 +516,6 @@
                 </article>
             </div>
         </section>
-
 
     </main>
 
