--- a/views/sign_In.html
+++ b/views/sign_In.html
@@ -71,6 +71,7 @@
                     <li><a href="../index.html" class="link">Home</a></li>
                     <li><a href="store.html" class="link">Store</a></li>
                     <li><a href="../index.html#giftCards" class="link">Gift cards</a></li>
+                    <li><a href="show_Room.html" class="link">Show Room</a></li>
                 </ul>
             </section>
             <section class="contactUs">
