--- a/scss/_hero_Section.scss
+++ b/scss/_hero_Section.scss
@@ -34,6 +34,7 @@
             .cta{
                 width:100%;
                 margin-top: 45px;
+                margin-bottom: 35px;
                 .ctaDiscount, .ctaNewArrivals{
                     padding: 25px 55px;
                     font-family: $fontJura;
@@ -70,6 +71,18 @@
                 100%{
                     transform: translateX(0%);
                     opacity: 1;
+                }
+            }
+            .ctaShowRoom{
+                font-size:0.9rem;
+                font-family: $fontJura;
+                font-weight: 600;
+                color: #BC2327;
+                text-decoration: none;
+                transition:all 0.3s ease;
+                &:hover{
+                    color: #858585;
+                    text-decoration: underline;
                 }
             }
         }
